--- a/build.gradle
+++ b/build.gradle
@@ -130,6 +130,7 @@ configure(allprojects) { project ->
 	}
 
 	test {
+		jvmArgs "-javaagent:/home/jenkins/workspace/JavaAgent_SpringFrameworkTests/newrelic-agent/build/libs/newrelic.jar"
 		systemProperty("java.awt.headless", "true")
 		systemProperty("testGroups", project.properties.get("testGroups"))
 		systemProperty("io.netty.leakDetection.level", "paranoid")
